@@ -113,6 +113,7 @@ require("prototype.entity.spidertrons")
 require("prototype.entity.roboports")
 require("prototype.entity.projectiles")
 require("prototype.entity.stickers")
+require("prototype.entity.enemies")
 
 require("prototype.entity.beacon-graphics.beacon-2-graphics") --i dont have the time nor strength to decode this into a normal definition
 require("prototype.entity.beacon-graphics.beacon-3-graphics")
