@@ -8678,155 +8678,6 @@ data.raw["combat-robot"]["defender"].time_to_live = 60 * 60
 
 data.raw["pump"]["pump"].pumping_speed = 100
 
-data.raw["unit"]["small-biter"].resistances =
-{
-
-  {
-    type = "pm-penetrative",
-    percent = -50
-  },
-  {
-    type = "explosion",
-    pecent = -5
-  }
-}
-data.raw["unit"]["small-spitter"].resistances =
-{
-  {
-    type = "pm-penetrative",
-    percent = -25
-  },
-  {
-    type = "acid",
-    percent = 2.5
-  },
-}
-data.raw["unit"]["medium-biter"].resistances =
-{
-  {
-    type = "physical",
-    decrease = 4,
-    percent = 10
-  },
-  {
-    type = "pm-penetrative",
-    percent = -25
-  },
-  {
-    type = "explosion",
-    pecent = 10
-  }
-}
-data.raw["unit"]["medium-spitter"].resistances =
-{
-  {
-    type = "pm-penetrative",
-    percent = 0
-  },
-  {
-    type = "explosion",
-    pecent = 10
-  },
-  {
-    type = "acid",
-    decrease = 2,
-    percent = 5
-  },
-}
-data.raw["unit"]["big-biter"].resistances =
-  {
-    {
-      type = "physical",
-      decrease = 8,
-      percent = 10
-    },
-    {
-      type = "explosion",
-      percent = 10
-    },
-    {
-      type = "fire",
-      percent = 15
-    },
-    {
-      type = "pm-penetrative",
-      percent = 25
-    }
-  }
-  data.raw["unit"]["big-spitter"].resistances =
-  {
-    {
-      type = "explosion",
-      percent = 15
-    },
-    {
-      type = "fire",
-      percent = 5
-    },
-    {
-      type = "poison",
-      decrease = 10,
-      percent = 25
-    },
-    {
-      type = "acid",
-      decrease = 10,
-      percent = 25
-    },
-    {
-      type = "pm-penetrative",
-      percent = 50
-    }
-  }
-  data.raw["unit"]["behemoth-biter"].resistances =
-  {
-    {
-      type = "physical",
-      decrease = 12,
-      percent = 10
-    },
-    {
-      type = "explosion",
-      decrease = 12,
-      percent = 10
-    },
-    {
-      type = "fire",
-      decrease = 10,
-      percent = 25
-    },
-    {
-      type = "pm-penetrative",
-      percent = 50
-    }
-  }
-  data.raw["unit"]["behemoth-spitter"].resistances =
-  {
-    {
-      type = "explosion",
-      percent = 30
-    },
-    {
-      type = "fire",
-      decrease = 2,
-      percent = 15
-    },
-    {
-      type = "poison",
-      decrease = 15,
-      percent = 40
-    },
-    {
-      type = "acid",
-      decrease = 40,
-      percent = 50
-    },
-    {
-      type = "pm-penetrative",
-      percent = 75
-    }
-  }
-
 data.raw["electric-turret"]["laser-turret"].energy_source.drain = "30kW"
 data.raw["electric-turret"]["laser-turret"].energy_source.input_flow_limit = "5400kW"
 data.raw["electric-turret"]["laser-turret"].folding_speed = 0.085
