@@ -61,6 +61,7 @@ Date: 2024-12-08
     - Implemented octane fuel canisters, which act as advanced versions of the existing fuel canisters. Two of them exist, Vehicle and Industrial; naptha/kerosene make industrial and diesel/petrol make vehicle.
     - Added longer-handed inserters, to deal with bigger and bigger recipes!
     - Added a new achievement for using a combat bot.
+    - Added a new type of damage, Penetrative, which is used by shotgun shells/slugs or genevas neglection ammo. smaller biters and nests are weaker to it, while spitters and worms are resistant to it.
 
   Changes:
     - Changed CRT's recipe to take CRT framing and screens.
